--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="header-content">
             <div class="header-content-inner">
                 <h1>CSFidelis Assessoria</h1>
-                <h2>Segurança do Trabalho</h2>
+                <h2>Segurança do Trabalho e Gestão Ambiental</h2>
                 <hr>
                 <p>Visamos assessorar técnicamente os clientes que buscam adequar-se às normas e padrões de segurança, higiene e saúde no trabalho.</p>
                 <a href="#about" class="btn btn-success btn-xl page-scroll ">Saiba mais</a>
