--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br   ">
+<html lang="pt-br">
 
 <head>
 
@@ -93,7 +93,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">  <i class="fa fa-4x fa-group wow bounceIn text-light" data-wow-delay=".1s"></i></h2>
                     <hr class="light">
-                    <p class="text-faded">Somos uma equipe de técnicos de segurança prontos para atender às necessidades de sua empresa. Seja com treinamentos, palestras, consultoria em segurança do trabalho e/ou gestão ambiental</p>
+                    <p class="text-faded">Somos uma equipe de profissionais prontos para atender às necessidades de sua empresa. Seja com treinamentos, palestras, consultoria em segurança do trabalho e/ou gestão ambiental</p>
 
                 </div>
             </div>
