--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <meta name="description" content="Visamos assessorar técnicamente os clientes que buscam adequar-se às normas e padrões de segurança, higiene e saúde no trabalho.">
     <meta name="keywords" content="dds, segurança do trabalho, csfidelis, treinamento, nr, normas regulamentadoras, segurança, técnico de segurança">
     <meta name="theme-color" content="#5cb85c">
-    <meta name="author" content="Carlos dos Santos Fidelis">
-
+    <meta name="author" content="Carlos Fidelis">
+    <meta property="og:image" content="img/csfidelis_logo.png">
+    
     <title>Assessoria |CSFidelis</title>
 
     <!-- Bootstrap Core CSS -->
