Ajuste no logo da pré visualização

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="dds, segurança do trabalho, csfidelis, treinamento, nr, normas regulamentadoras, segurança, técnico de segurança">
     <meta name="theme-color" content="#5cb85c">
     <meta name="author" content="Carlos Fidelis">
-    <meta property="og:image" content="img/csfidelis_logo.png">
+    <meta property="og:image" content="http://csfidelis.com.br/img/csfidelis_logo.png">
     
     <title>Assessoria |CSFidelis</title>
 
