Ajuste nas meta tags

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <meta name="keywords" content="dds, segurança do trabalho, csfidelis, treinamento, nr, normas regulamentadoras, segurança, técnico de segurança">
     <meta name="theme-color" content="#5cb85c">
     <meta name="author" content="Carlos Fidelis">
+   
+    <meta property="og:title" content="CSFidelis Assessoria">
+    <meta property="og:description" content="Visamos assessorar técnicamente os clientes que buscam adequar-se às normas e padrões de segurança, higiene e saúde no trabalho.">
     <meta property="og:image" content="http://csfidelis.com.br/img/csfidelis_logo.png">
+    <meta property="og:url" content="http://csfidelis.com.br">
     
     <title>Assessoria |CSFidelis</title>
 
